--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@lichtblick/eslint-plugin": "1.0.1",
     "@types/jest": "^29.4.0",
     "@types/js-yaml": "^4.0.5",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-es": "4.1.0",
