--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@foxglove/rosbag2",
-  "version": "5.0.1",
+  "name": "@lichtblick/rosbag2",
+  "version": "1.0.0",
   "description": "ROS2 (Robot Operating System) bag reader and writer abstract implementation",
   "license": "MIT",
   "keywords": [
@@ -17,13 +17,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/foxglove/rosbag2.git"
+    "url": "https://github.com/lichtblick-suite/rosbag2.git"
   },
   "author": {
-    "name": "Foxglove Technologies Inc",
-    "email": "contact@foxglove.dev"
+    "name": "Lichtblick",
+    "email": "lichtblick@bmwgroup.com"
   },
-  "homepage": "https://github.com/foxglove/rosbag2",
+  "homepage": "https://github.com/lichtblick-suite/rosbag2",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -39,11 +39,11 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@foxglove/eslint-plugin": "0.21.0",
+    "@lichtblick/eslint-plugin": "1.0.1",
     "@types/jest": "^29.4.0",
     "@types/js-yaml": "^4.0.5",
-    "@typescript-eslint/eslint-plugin": "5.54.0",
-    "@typescript-eslint/parser": "5.54.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "eslint": "8.35.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-es": "4.1.0",
@@ -57,9 +57,9 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@foxglove/rosmsg-msgs-common": "^3.0.0",
-    "@foxglove/rosmsg2-serialization": "^2.0.0",
-    "@foxglove/rostime": "^1.1.2",
+    "@lichtblick/rosmsg-msgs-common": "1.0.1",
+    "@lichtblick/rosmsg2-serialization": "1.0.0",
+    "@lichtblick/rostime": "1.0.0",
     "@foxglove/schemas": "^1.3.1",
     "js-yaml": "^4.1.0"
   }
